Inicio de cambios en tercer paso (métodos de pago).

--- a/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
+++ b/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
@@ -262,6 +262,7 @@
                         <h5><br></h5>
                         <h5>{% bootstrap_field form.cuotas show_label=False layout='horizontal' %}</h5>
                         <h5>{% bootstrap_field form.cuotas2 show_label=False layout='horizontal' %}</h5>
+                        <h5>{% bootstrap_field form.cuotas3 show_label=False layout='horizontal' %}</h5>
                         <h5><br></h5>
                         <h5><br></h5>
                         <h5><br></h5>
