Mejorado html para convertir a pdf

--- a/cotizador_acerta/templates/polizas/pdf_personaNatural.html
+++ b/cotizador_acerta/templates/polizas/pdf_personaNatural.html
@@ -383,90 +383,79 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td colspan="2" style="border: 1px solid #E76C42; text-align: left; padding-top: 5px; padding-left: -15px; padding-right: -150px;">
+					<td colspan="2" style="border: 1px solid #E76C42; text-align: left; padding-top: 5px; padding-left: -15px; padding-right: -50px;">
 						<p>
 							<table>
-								<tr>
-									<td>Datos de Cobranza: Responsable de pago: </td>
-									<td>Forma de pago: </td>
+								<tr style="padding-bottom: -5px;">
+									<td><span style="text-decoration: underline; font-weight: bold;">Datos de Cobranza: </span><span style="text-decoration: underline">Responsable de pago: </span></td>
+								</tr>
+								<tr style="padding-bottom: -5px;">
+									<td><span></span><span>Igual al contratante de la póliza</span></td>
+									<td><span></span><span>Igual al asegurado de la póliza</span></td>
+								</tr>
+								<tr style="padding-bottom: -5px;">
+									<td><span></span><span>El responsable de pago es distinto, favor completar:</span></td>
+								</tr>
+								<tr style="padding-bottom: -5px;">
+									<td>
+										<span>Cédula/Pasaporte o RUC: </span>
+										<span></span>
+									</td>
+									<td>
+										<span>Nombre Completo: </span>
+										<span></span>
+									</td>
 								</tr>
 								<tr>
-									<td style="width: 460px;">
-									<p>&nbsp;</p>
-										<p>Igual al contratante de la póliza</p>
-										<p>Igual al asegurado de la póliza</p>
-										<p>El responsable de pago es distinto, favor completar: </p>
-										<p>
-											Cédula/Pasaporte o RUC:
-										</p>
-										<p>&nbsp;</p>
-										<p>
-											Nombre Completo:
-										</p>
-										<p>&nbsp;</p>
-										<p>&nbsp;</p>
-										<p style="font-size: 7px;">Si el responsable de pago es distinto al cliente o al asegurado deberá</p>
-										<p style="font-size: 7px;">completar un Formulario Único de Datos del Cliente.</p>
-									</td>
-									<td style="padding-left: -25px;">
+									<td colspan="3" style="font-size: 7px;">Si el responsable de pago es distinto al cliente contratante o al asegurado deberá completar un Formulario Único de Datos del Cliente</td>
+								</tr>
+								<tr>
+									<td style="text-decoration: underline;">Forma de pago: </td>
+								</tr>
+								<tr>
+									<td colspan="4" style="padding-left: 30px;">
 										<p>
 											<table>
 												<tr>
-													<td style="padding-right: -40px; border: 1px solid #999;">
-														<p style="border: 1px solid #999;">
-															<p>a) Descuento por tarjeta de crédito (hasta 10 pagos mensuales)</p>
-															<p>
-																<span>Visa</span><span></span>
-																<span>Master Card</span><span></span>
-																<span>Dinners</span><span></span>
-																<span>American Express</span><span></span>
-															</p>
-															<p>
-																<span>Nro. de Tarjeta</span>
-																<span></span>-
-																<span></span>-
-																<span></span>-
-																<span></span>
-															</p>
-															<p>
-																<span>Banco: </span><span></span>
-																<span>Fecha de expiración: </span><span></span><span>(mm/aaaa)</span>
-															</p>
-															<p style="padding-top: -7px; color: #999">
-																____________________________________________________________________
-															</p>
+													<td colspan="3" style="border: 2px solid #999; padding-right: -60px; padding-left: -25px;">
+														<p style="padding-bottom: -10px;">a) Descuento por tarjeta de crédito</p>
+														<p style="padding-bottom: -10px;">
+														<span>Visa</span><span></span>
+														<span>Master Card</span><span></span>
+														<span>Dinners</span><span></span>
+														<span>American Express</span><span></span>
 														</p>
-														<p>b) Débito a cuenta de ahorros o cuenta corriente (hasta 10 pagos mensuales)</p>
-														<p style="padding-top: -7px; color: #999">
-																____________________________________________________________________
-															</p>
-														<p>c) Remesa (solo corredor autorizado)</p>
-														<p style="padding-top: -7px; color: #999">
-																____________________________________________________________________
-															</p>
-														<p>d) Directo en caja (hasta 6 pagos mensuales)</p>
-													</td>
-													<td>
+														<p style="padding-bottom: -10px;">
+														<span>Nro. Tarjeta: </span><span></span>-<span></span>-<span></span>-<span></span>
+														</p>
 														<p>
-															<p>&nbsp;</p>
-															<p>&nbsp;</p>
-															<p>&nbsp;</p>
-															<p>&nbsp;</p>
+														<span>Banco: </span><span></span>
+														<span>Fecha de expiración: </span><span></span><span>(mm/aaaa)</span>
 														</p>
 													</td>
-
-												</tr>
-											</table>
-										</p>
-										<p>
-											<table>
-												<tr>
-													<td colspan="2">Cantidad de pago: </td>
-													<td>&nbsp;Día de pago</td>
+													<td style="border: 2px solid #999; padding-right: -60px; padding-left: -25px; width: 15%;"></td>
 												</tr>
 												<tr>
-													<td style="border: 1px solid #999; width: 35%;">* Un pago anual</td>
-													<td style="border: 1px solid #999; width: 35%;">* <span></span><span>Pagos mensuales</span></td>
+													<td colspan="3" style="border: 2px solid #999; padding-right: -60px; padding-left: -25px;"><p>b) Débito a cuenta de ahorros o cuenta corriente (hasta 10 pagos mensuales) (adjuntar formulario)</p></td>
+													<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px; width: 15%;"></td>
+												</tr>
+												<tr>
+													<td colspan="3" style="border: 2px solid #999; padding-right: -60px; padding-left: -25px;"><p>c) Remesa (solo corredor autorizado)</p></td>
+													<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px; width: 15%;"></td>
+												</tr>
+												<tr>
+													<td colspan="3" style="border: 2px solid #999; padding-right: -60px; padding-left: -25px;"><p>d) Directo en caja (hasta 6 pagos mensuales)</p></td>
+													<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px; width: 15%;"></td>
+												</tr>
+												<tr>
+													<td colspan="3" style="text-decoration: underline;">Cantidad de pago: </td>
+													<td colspan="2">Día de pago: </td>
+												</tr>
+												<tr>
+													<td style="border: 2px solid #999; padding-right: -60px; padding-left: -25px;">* Un pago anual</td>
+													<td style="border: 2px solid #999; padding-right: -60px; padding-left: -25px; width: 15%;"></td>
+													<td style="border: 2px solid #999; padding-right: -60px; padding-left: -25px;">* <span></span><span>Pagos mensuales</span></td>
+													<td style="border: 2px solid #999; padding-right: -60px; padding-left: -25px; width: 15%;"></td>
 													<td></td>
 												</tr>
 											</table>
@@ -603,72 +592,72 @@
 								</tr>
 								<tr style="border: 2px solid #999; padding-bottom: -1px;">
 									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 100px;">
-										<span style="font-size: 9px;">1. Solicitud de póliza </span><span style="font-size: 7px;">completa, legible y debidamente firmada</span>
+										<span style="font-size: 9px;">1. Solicitud de póliza </span><span style="font-size: 7px;">completa, legible y <br>debidamente firmada</span>
 									</td>
-									<td style="padding-right: -40px; padding-left: -25px;">
+									<td style="padding-right: -40px; padding-left: -25px;width: 5%;">
 									</td>
-									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 100px;">
+									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 50%;">
 										<span style="font-size: 9px;">5. Registro de Propiedad Vehicular (auto <br> usado) o Proforma (auto nuevo)</span>
 									</td>
-									<td style="padding-right: -40px; padding-left: -25px;">
+									<td style="padding-right: -40px; padding-left: -25px;width: 5%;">
 									</td>
-									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 100px;">
+									<td colspan="3" style="padding-right: -35px; padding-left: -29px;">
 										<span style="font-size: 9px;">9. Formulario de pago TCR o ACH <br>(si aplica por forma de pago)</span>
 									</td>
 									<td>
 									</td>
 								</tr>
 								<tr style="border: 2px solid #999; padding-bottom: -1px;">
-									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 100px;">
+									<td colspan="3" style="padding-right: -35px; padding-left: -29px;">
 										<span style="font-size: 9px;">2. Otros formularios CTC </span><span style="font-size: 7px;">que sean requeridos completos, legibles y debidamente firmados</span>
 									</td>
-									<td style="padding-right: -40px; padding-left: -25px;">
+									<td style="padding-right: -40px; padding-left: -25px;width: 5%;">
 									</td>
-									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 100px;">
+									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 50%;">
 										<span style="font-size: 9px;">6. Informe de inspección (auto usado)</span>
 									</td>
-									<td style="padding-right: -40px; padding-left: -25px;">
+									<td style="padding-right: -40px; padding-left: -25px;width: 5%;">
 									</td>
-									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 100px;">
+									<td colspan="3" style="padding-right: -35px; padding-left: -29px;">
 										<span style="font-size: 9px;">10. Confirmación de pago de la primera letra</span>
 									</td>
-									<td>
-									</td>
-								</tr>
-								<tr style="border: 2px solid #999; padding-bottom: -1px; width: 100px;">
-									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 100px;">
-										<span style="font-size: 9px;">3. Cotización</span>
-									</td>
-									<td style="padding-right: -40px; padding-left: -25px;">
-									</td>
-									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 100px;">
-										<span style="font-size: 9px;">7. Consulta de tránsito</span>
-									</td>
-									<td style="padding-right: -40px; padding-left: -25px;">
-									</td>
-									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 100px;">
-										<span style="font-size: 9px;">11. Correos u otros del cliente, coaseguradoras <br> o reaseguradores (opcional)</span>
-									</td>
-									<td>
+									<td style="width: 5%;">
 									</td>
 								</tr>
 								<tr style="border: 2px solid #999; padding-bottom: -1px;">
-									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 100px;">
-										<span style="font-size: 9px;">4. Copia de cédula</span>
+									<td colspan="3" style="padding-right: -35px; padding-left: -29px;">
+										<span style="font-size: 9px;">3. Cotización</span>
 									</td>
-									<td style="padding-right: -40px; padding-left: -25px; width: 100px;">
+									<td style="padding-right: -40px; padding-left: -25px;width: 5%;">
 									</td>
-									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 100px;">
-										<span style="font-size: 9px;">8. Consulta de claimssearch</span>
+									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 50%;">
+										<span style="font-size: 9px;">7. Consulta de tránsito</span>
 									</td>
-									<td style="padding-right: -40px; padding-left: -25px; width: 100px;">
+									<td style="padding-right: -40px; padding-left: -25px;width: 5%;">
 									</td>
-									<td colspan="3" style="padding-right: -35px; padding-left: -25px; width: 100px;">
+									<td colspan="3" style="padding-right: -35px; padding-left: -29px;">
+										<span style="font-size: 9px;">11. Correos u otros del cliente, coaseguradoras <br> o reaseguradores (opcional)</span>
 									</td>
-									<td>
+									<td style="width: 5%;">
 									</td>
 								</tr>
-								<tr style="padding-bottom: -10px;">
+								<tr style="border: 2px solid #999; padding-bottom: -1px;">
+									<td colspan="3" style="padding-right: -35px; padding-left: -29px;">
+										<span style="font-size: 9px;">4. Copia de cédula</span>
+									</td>
+									<td style="padding-right: -40px; padding-left: -25px; width: 100px;width: 5%;">
+									</td>
+									<td colspan="3" style="padding-right: -35px; padding-left: -29px; width: 50%;">
+										<span style="font-size: 9px;">8. Consulta de claimssearch</span>
+									</td>
+									<td style="padding-right: -40px; padding-left: -25px; width: 100px;width: 5%;">
+									</td>
+									<td colspan="3" style="padding-right: -35px; padding-left: -25px;">
+									</td>
+									<td style="width: 5%;">
+									</td>
+								</tr>
+								<tr style="padding-bottom: -10px; width: 5%;">
 									<td></td>
 								</tr>
 								<tr style="border: 2px solid #999; padding-bottom: -1px;">
